[NHC] Add configurations endpoints (#1590)
* [NHC] Add configurations endpoints

* Add support for configuring API endpoint

* Update OpenAPI specs and relevant documentation

* Address comments around listen address and validation
